@@ -202,21 +202,21 @@ int ppp_set_addrs()
 	     * clobbers all the routes.
 	     */
 	    proxy_config(local_ip,remote_ip);
-	    set_ptp("sl",proxy_iface,remote_ip,1);
-	    del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
-	    add_routes("sl",proxy_iface,local_ip,remote_ip,1); 
+	    set_ptp("sl",proxy_iface,remote_ip,metric+1);
+	    del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
+	    add_routes("sl",proxy_iface,local_ip,remote_ip,metric+1); 
 	}
 
 #if 1
 	/* This is redundant in normal operation, but if we
 	 * have to restart the link, then this is necessary...
 	 */
-	set_ptp("ppp",link_iface,remote_ip,0);
+	set_ptp("ppp",link_iface,remote_ip,metric+0);
 #endif
 
 	if (do_reroute) {
-	     add_routes("ppp",link_iface,local_ip,remote_ip,0);
-	     del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
+	     add_routes("ppp",link_iface,local_ip,remote_ip,metric+0);
+	     del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
 	}
 	return 1;
     }
@@ -295,13 +295,13 @@ void ppp_reroute()
     if (blocked && !blocked_route)
 	del_ptp("sl",proxy_iface,orig_remote_ip);
     else {
-	set_ptp("sl",proxy_iface,orig_remote_ip,1);
-	add_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
+	set_ptp("sl",proxy_iface,orig_remote_ip,metric+1);
+	add_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
     }
     local_addr = inet_addr(orig_local_ip);
     /* If we did routing on the ppp link, remove it */
     if (do_reroute && link_iface != -1)
-    	del_routes("ppp",link_iface,local_ip,remote_ip,0);
+    	del_routes("ppp",link_iface,local_ip,remote_ip,metric+0);
     link_iface = -1;
 }
 
