@@ -186,7 +186,7 @@ void slip_start(void)
 
 #if 1
     /* Set the routing for the new slip interface */
-    set_ptp("sl",link_iface,remote_ip,0);
+    set_ptp("sl",link_iface,remote_ip,metric+0);
 #endif
 
     /* run bootp if it is asked for */
@@ -255,7 +255,7 @@ int slip_set_addrs()
 
 #if 1
     /* Set the routing for the new slip interface */
-    set_ptp("sl",link_iface,remote_ip,0);
+    set_ptp("sl",link_iface,remote_ip,metric+0);
 #endif
 
     if (dynamic_addrs || force_dynamic) {
@@ -266,14 +266,14 @@ int slip_set_addrs()
     if (!do_reroute
     && ((dynamic_addrs || force_dynamic) || (blocked && !blocked_route))) {
 	proxy_config(local_ip,remote_ip);
-	set_ptp("sl",proxy_iface,remote_ip,1);
-	del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
-	add_routes("sl",proxy_iface,local_ip,remote_ip,1);
+	set_ptp("sl",proxy_iface,remote_ip,metric+1);
+	del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
+	add_routes("sl",proxy_iface,local_ip,remote_ip,metric+1);
     }
 
     if (do_reroute) {
-        add_routes("sl",link_iface,local_ip,remote_ip,0);
-	del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
+        add_routes("sl",link_iface,local_ip,remote_ip,metric+0);
+	del_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
     }
 
     return 1;
@@ -303,13 +303,13 @@ void slip_reroute()
     if (blocked && !blocked_route)
 	del_ptp("sl",proxy_iface,orig_remote_ip);
     else {
-	set_ptp("sl",proxy_iface,orig_remote_ip,1);
-	add_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,1);
+	set_ptp("sl",proxy_iface,orig_remote_ip,metric+1);
+	add_routes("sl",proxy_iface,orig_local_ip,orig_remote_ip,metric+1);
     }
     local_addr = inet_addr(orig_local_ip);
     /* If we did routing on the slip link, remove it */
     if (do_reroute && link_iface != -1) /* just in case we get called twice */
-    	del_routes("sl",link_iface,local_ip,remote_ip,0);
+    	del_routes("sl",link_iface,local_ip,remote_ip,metric+0);
     link_iface = -1;
 }
 
